# buddy_auth

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  auth_routes.py  config.py  main.py  models.py  presence.py  presence_routes.py  security.py  supabase_client.py
docs/: add-presence-last-seen.sql  auth-rbac.md  auth-rbac.sql  demo-public-role-selection.sql  developer-handoff-prompt.md  full-supabase-setup.sql  lms-learning-schema.sql
frontend/: README.md  config.js  index.html  presence-dashboard.js  run-ui.ps1
