[project]
name = "buddy-auth-api"
version = "0.1.0"
description = "FastAPI backend for Supabase Auth, profile sync, and database-backed RBAC."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
